syntax = "proto3";
import "google/protobuf/any.proto";

package element;

service DataService {
  rpc getData (DataItem) returns (DataChuckList) {}
  rpc addData (StorageItem) returns (DataChuckList) {}
}

message Empty {}

message DataChuck {
  string id = 1;
  string name = 2;
  Item data = 3;
}

message Item {
  optional string value = 1;
  optional string field1 = 2;
  optional string field2 = 3;
  optional string field3 = 4;
}

message DataChuckList {
  repeated DataChuck chunks = 1;
}


message DataItem {
  string source = 1;
  int64 size = 2;
}

message StorageItem {
  string source = 1;
  repeated Item chunks = 2;
}